--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
 /* ------------------------------------------------------------------------------
-
 	Template Name: Folix
 	Template URI: http://http://www.themeelite.com/folix
 	Description: Full Screen Coming Soon Template
@@ -74,6 +73,16 @@ p {
 	padding-bottom:38px;
 	margin:0px;
 }
+
+li {
+	font-family: 'Open Sans', sans-serif;
+	font-size:15px;
+	line-height:10px;
+	font-weight:400;
+	padding-bottom:38px;
+	margin-left:30px;
+}
+
 h1 {
 	font-family: 'Open Sans', sans-serif;
 	font-size:48px;
@@ -81,6 +90,7 @@ h1 {
 	font-weight:700;
 	margin:0px;
 	padding-bottom:8px;
+	margin-bottom: 40px;
 }
 h2 {
 	font-family: 'Open Sans', sans-serif;
@@ -96,8 +106,8 @@ h2 {
 }
 h3 {
 	font-family: 'Open Sans', sans-serif;
-	font-size:18px;
-	line-height:21px;
+	font-size:24px;
+	line-height:0px;
 	padding-bottom:3px;
 	font-weight:400;
 	margin:0px;
@@ -149,7 +159,19 @@ header {
 	background:#CACACA;
 }
 .bannerText {
-	position:absolute ;
+	/*position:absolute;
+	left:0;
+	right:0;
+	top:35%;
+	text-align:center;
+	padding:30px 0 30px;
+	max-width:960px;
+	border:1px solid #fff;*/
+	/*background: rgba(0, 0, 0, 0.3);
+ filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#b2000000, endColorstr=#b2000000);
+	zoom: 1;*/
+	
+	position:relative ;
 	left:0;
 	right:0;
 	top:35%;
@@ -365,9 +387,7 @@ header {
 	margin-top:8px;
 	background-color:#4c404d;
 }
-.navbar-inverse .navbar-toggle:hover, .navbar-inverse .navbar-toggle:focus{
-	
-	}
+
 .navbar-brand{
 	margin-top:4px;
 	}
@@ -444,8 +464,7 @@ header {
 .hideClass {
 	display:none;
 }
-.carousel {
-}
+
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
 	z-index: 10;
@@ -565,13 +584,9 @@ header {
 	height:60px;
 	background:#eeeeee;
 }
-.technical {
-	/*background:#eeeeee;
-	color:#474d5d;*/
-}
+
 .technical .container {
-	padding-top:117px;
-	padding-bottom:100px;
+	padding-top:50px;
 }
 .technical .heading p {
 	padding-bottom:41px;
@@ -588,6 +603,13 @@ header {
 	color:#5b4c5c;
 	margin-bottom:49px;
 }
+
+.technical h3 {
+	color:#5b4c5c;
+	margin-top:-30px;
+	margin-bottom:49px;
+}
+
 .technical .skillsArea {
 	padding:0px;
 }
@@ -622,9 +644,7 @@ header {
 	padding-bottom:11px;
 	color:#5b4c5c;
 }
-.skilBg {
-	/*background:url(../images/skills.png) no-repeat 0 0;*/
-}
+
 .chart {
 	position: relative;
 	display: inline-block;
@@ -787,9 +807,7 @@ header {
 	height:22px;
 	background:url(../images/arrow-left.png) no-repeat 0 0 #ffffff;
 }
-.education .exCon {
-	
-}
+
 .education .workDetails .rightArea {
 	border-left-color:#897f8a;
 }
@@ -1289,11 +1307,7 @@ ul.portfolioContainer li:hover span.hoverBox .linKed {
 -------------------------------------------------------------------------------*/
 
 @media screen and (min-width: 1200px) {
- .workYear {
- /*width:140px;
- height:140px;
- padding-top:50px;*/
-}
+
  .education .workYear {
  padding-top:25px;
 }
@@ -1312,11 +1326,7 @@ ul.portfolioContainer li:hover span.hoverBox .linKed {
 }
 
  @media screen and (max-width: 991px) {
- .navbar.navbar-inverse.navbar-static-top a {
-/* padding-left:12px;
- padding-right:12px;
- font-size:12px;*/
-}
+
  .bannerText {
  padding-left:25px;
  padding-right:25px;
@@ -1345,9 +1355,7 @@ ul.portfolioContainer li:hover span.hoverBox .linKed {
  .abc {
  width:100%;
 }
- .navbar.navbar-inverse.navbar-static-top a {
-/* padding-left: 17px;*/
-}
+
 }
 @media screen and (max-width: 992px) {
 	.aboutme{
@@ -1364,9 +1372,7 @@ ul.portfolioContainer li:hover span.hoverBox .linKed {
  .conForm input.col-lg-6 {
  width: 48.5%;
 }
-.aboutme{
-	/*padding:15px;*/
-	}
+
 }
  @media screen and (max-width: 768px) {
  .navbar-wrapper .container,  .navwrapper .container {
